--- a/portfolio.html
+++ b/portfolio.html
@@ -281,7 +281,7 @@
           </address>
         </div>
         <div class="join-box">
-          <strong class="join-title">ПРИСОЕДЕНЯЙТЕСЬ</strong>
+          <strong class="join-title">Присоединяйтесь</strong>
           <ul class="footer-social-networks list">
             <li class="footer-social-item">
               <a
@@ -332,6 +332,22 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div class="subscribe-box">
+          <strong class="subscribe-title">Подпишитесь на рассылку</strong>
+          <div class="form-box">
+            <form class="footer-form">
+              <label>
+                <input class="subscribe-input" type="email" name="email" placeholder="E-mail" />
+              </label>
+            </form>
+            <button type="submit" class="subscribe-button">
+              Подписаться
+              <svg class="subscribe-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </div>
         </div>
       </div>
     </footer>
