--- a/index.html
+++ b/index.html
@@ -526,10 +526,10 @@
               </label>
             </form>
             <button type="submit" class="subscribe-button">
+              Подписаться
               <svg class="subscribe-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-send"></use>
               </svg>
-              Подписаться
             </button>
           </div>
         </div>
@@ -569,10 +569,22 @@
             <textarea
               class="form-comment"
               name="comment"
-              rows="10"
+              rows="6"
               placeholder="Введите текст"
             ></textarea>
           </label>
+          <label class="checkbox-field">
+            <input type="checkbox" class="checkbox" name="check-mark" />
+            <svg class="icon-frame" width="16" height="15">
+              <use href="./images/icons.svg#icon-frame"></use>
+            </svg>
+            <svg class="icon-check" width="16" height="15">
+              <use href="./images/icons.svg#icon-check"></use>
+            </svg>
+            <span class="checkbox-label">Соглашаюсь с рассылкой и принимаю</span>
+            <a class="terms-link" href="" target="_blank"> Условия договора</a>
+          </label>
+          <button type="submit" class="send-button">Отправить</button>
         </form>
         <button data-modal-close type="button" class="close-button">
           <svg class="modal-icon" width="18" height="18">
